@@ -1,3 +1,9 @@
+2011-12-13 arne
+
+	* fix saving UIDescription on Windows
+	* fix finding UIEditController::getEditorDescription
+	* fix compile error with newer Visual Studio compilers
+
 2011-11-25 arne
 
 	* merge changes from vstgui_400 :
